--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Fundamentals of Computing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fundamentals of Computing</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1> Fundamentals of Computing</h1>
-<img src="https://cyber.olympiadsuccess.com/assets/images/cyber_square/cyber_topic_20.jpg" alt="FoC" width="918" height="514">
 
-<p>This course is an introduction to the fundamentals of Computer Science that will provide students with a foundation for future courses in Computer Science. The course is a broad survey of the discipline through topics that allow students to understand the capabilities of computer systems in terms of: the computer architecture; operating systems and computer networks; software and software development; data organization and visualization; and the potential of computing machines. </p>
-<a href="course.html">Course</a><br>
-<a href="project.html">Project</a><br>
-<a href="concepts.html">Concepts</a><br>
-<a href="databases.html">Databases</a><br>
-<a href="documents.html">Documents</a><br>
-<a href="aboutme.html">About me</a><br>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Course</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="concepts.html">Concepts</a></li>
+      <li><a href="databases.html">Databases</a></li>
+      <li><a href="documents.html">Documentation</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+    </ul>
+  </nav>
+
+  
+  <header>
+    <h1>Fundamentals of Computing</h1>
+  </header>
+
+  <main>
+    <img src="Images/FoC.jpg" alt="Fundamentals of Computing" class="main-image">
+
+    <p>
+      This course is an introduction to the fundamentals of Computer Science that will provide students with a foundation for future courses in Computer Science. The course is a broad survey of the discipline through topics that allow students to understand the capabilities of computer systems in terms of: the computer architecture; operating systems and computer networks; software and software development; data organization and visualization; and the potential of computing machines.
+    </p>
+  </main>
+
+  <footer>
+    <p>@ Powered by UB</p>
+  </footer>
+
 </body>
 </html>
+
+
