--- a/project.html
+++ b/project.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Fundamentals of Computing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project | Fundamentals of Computing</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Project</h1>
-<p>Project
-The final project will consist of 4 sections. Each section has a deadline to complete. A complete description of the project can be found on the course moodle site. It will consist of launching a website built with, html, css, and javascript and hosted on github. This site is a benchmark for the Final Project. See Project Specification on Moodle Site.
-<br>
-<br>
-<a href="https://kryanbz.github.io/FoC/notgate.html">Project 1: NOT Gate</a><br>
-<a href="https://kryanbz.github.io/FoC/andgate.html">Project 2: AND Gate</a><br>
-<a href="https://kryanbz.github.io/FoC/easyand.html">Project 2: AND Gate -easy version</a><br>
-<a href="https://kryanbz.github.io/FoC/binarytohex.html">Project 3: Binary to Hexidecimal Converter</a><br>
-<a href="https://kryanbz.github.io/FoC/ascii.html">Project 4: ASCII Converter</a><br>
-<a href="https://kryanbz.github.io/FoC/unicode.html">Project 4: UNICODE Converter</a><br>
-<a href="https://kryanbz.github.io/FoC/MLinstructions.html">Project 5: Machine Language Instructions Converter</a><br>
-<br>
-<a href="course.html">Course</a><br>
-<a href="project.html">Project</a><br>
-<a href="concepts.html">Concepts</a><br>
-<a href="databases.html">Databases</a><br>
-<a href="documents.html">Documents</a><br>
-<a href="aboutme.html">About me</a><br>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Course</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="concepts.html">Concepts</a></li>
+      <li><a href="databases.html">Databases</a></li>
+      <li><a href="documents.html">Documentation</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Fundamentals of Computing</h1>
+  </header>
+
+  <main>
+
+    <p>
+    <h1>Project</h1>
+      The final project consists of four sections, each with its own deadline. The full project description can be found on the course Moodle site. Students are required to build a website using HTML, CSS, and JavaScript, hosted on GitHub. This project serves as a benchmark for the final assessment.
+    </p>
+
+    <ul>
+      <li><a href="https://angelic88.github.io/FoC/notgate.html" target="_blank">Project 1: NOT Gate</a></li>
+      <li><a href="https://angelic88.github.io/FoC/andgate.html" target="_blank">Project 2: AND Gate</a></li>
+      <li><a href="https://angelic88.github.io/FoC/easyand.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
+      <li><a href="https://angelic88.github.io/FoC/binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
+      <li><a href="https://angelic88.github.io/FoC/ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
+      <li><a href="https://angelic88.github.io/FoC/unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
+      <li><a href="https://angelic88.github.io/FoC/MLinstructions.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
+    </ul>
+  </main>
+
+  <footer>
+    <p>@ Powered by UB</p>
+  </footer>
+
 </body>
 </html>
