--- a/concepts.html
+++ b/concepts.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Fundamentals of Computing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Concepts | Fundamentals of Computing</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Concepts</h1>
-<a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?slide=id.g55d2cabac8_1_10#slide=id.g55d2cabac8_1_10">
-<img src="https://kryanbz.github.io/FoC/concepts.PNG" alt="Algorithm" style="width:1029;height:580;">
-</a>
-<br>
-<a href="course.html">Course</a><br>
-<a href="project.html">Project</a><br>
-<a href="concepts.html">Concepts</a><br>
-<a href="databases.html">Databases</a><br>
-<a href="documents.html">Documents</a><br>
-<a href="aboutme.html">About me</a><br>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Course</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="concepts.html">Concepts</a></li>
+      <li><a href="databases.html">Databases</a></li>
+      <li><a href="documents.html">Documentation</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Concepts</h1>
+  </header>
+
+  <main>
+    <a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?slide=id.g55d2cabac8_1_10#slide=id.g55d2cabac8_1_10" target="_blank">
+      <img src="Images/algorithms.png" alt="Algorithm Concept" class="main-image">
+    </a>
+    <p>
+      This section includes fundamental computing concepts such as algorithms, data processing, and computational thinking. Click the image above to explore our Google Slides presentation on algorithm design.
+    </p>
+  </main>
+
+  <footer>
+    <p>@ Powered by UB</p>
+  </footer>
+
 </body>
 </html>
