--- a/aboutme.html
+++ b/aboutme.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Fundamentals of Computing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me | Fundamentals of Computing</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>About Me</h1>
-<p>My name is Liyanna Muschamp, I attended Belmopan Comprehensive School. Information Technology is a very interesting topic, so I choose to take it to widen my knowledge on it.</p>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Course</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="concepts.html">Concepts</a></li>
+      <li><a href="databases.html">Databases</a></li>
+      <li><a href="documents.html">Documentation</a></li>
+      <li><a href="aboutme.html">About Me</a></li>
+    </ul>
+  </nav>
 
-<a href="course.html">Course</a><br>
-<a href="project.html">Project</a><br>
-<a href="concepts.html">Concepts</a><br>
-<a href="databases.html">Databases</a><br>
-<a href="documents.html">Documents</a><br>
-<a href="aboutme.html">About me</a><br>
+  <header>
+    <h1>About Me</h1>
+  </header>
+
+  <main>
+    <p><strong>Name:</strong> Liyanna Muschamp</p>
+    <p><strong>High School:</strong> Belmopan Comprehensive School</p>
+    <p><strong>Courses Taken in High School:</strong> Spreadsheet and Database</p>
+    <p><strong>Why I Chose IT:</strong> It’s a very interesting field, and I want to expand my knowledge about it. I enjoy learning how computers work and how they can solve real-world problems.</p>
+  </main>
+
+  <footer>
+    <p>@ Powered by UB</p>
+  </footer>
+
 </body>
 </html>
