--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="project.html">Project</a></li>
       <li><a href="concepts.html">Concepts</a></li>
       <li><a href="databases.html">Databases</a></li>
-      <li><a href="documents.html">Documentation</a></li>
+      <li><a href="documentation.html">Documentation</a></li>
       <li><a href="aboutme.html">About Me</a></li>
     </ul>
   </nav>
@@ -39,5 +39,6 @@
 
 </body>
 </html>
+
 
 
