--- a/project.html
+++ b/project.html
@@ -19,7 +19,9 @@
     </ul>
   </nav>
 
-
+  <header>
+    <h1>Fundamentals of Computing</h1>
+  </header>
 
   <main>
 
@@ -45,5 +47,6 @@
 
 </body>
 </html>
+
 
 
