--- a/project.html
+++ b/project.html
@@ -31,13 +31,13 @@
     </p>
 
     <ul>
-      <li><a href="https://angelic88.github.io/FoC/notgate.html" target="_blank">Project 1: NOT Gate</a></li>
-      <li><a href="https://angelic88.github.io/FoC/andgate.html" target="_blank">Project 2: AND Gate</a></li>
-      <li><a href="https://angelic88.github.io/FoC/easyand.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
-      <li><a href="https://angelic88.github.io/FoC/binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
-      <li><a href="https://angelic88.github.io/FoC/ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
-      <li><a href="https://angelic88.github.io/FoC/unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
-      <li><a href="https://angelic88.github.io/FoC/MLinstructions.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/notgate.html" target="_blank">Project 1: NOT Gate</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/andgate.html" target="_blank">Project 2: AND Gate</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/easyand.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
+      <li><a href="https://kryanbz.github.io/FoC/MLinstructions.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
     </ul>
   </main>
 
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
