--- a/project.html
+++ b/project.html
@@ -39,6 +39,7 @@
       <li><a href="https://kryanbz.github.io/FoC/unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
       <li><a href="https://kryanbz.github.io/FoC/MLinstructions.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
     </ul>
+      <a href="index.html">⬅ Back to Home</a>
   </main>
 
   <footer>
@@ -47,6 +48,7 @@
 
 </body>
 </html>
+
 
 
 
