--- a/notGate.html
+++ b/notGate.html
@@ -25,7 +25,8 @@
 	<img id="belizeImage" src="noton2.png" alt="noton" width="400" height="86" align="center">
   </div>
 </div>
-<a href="Final Project/project.html">Back to Home</a></h3>
+<a href="../index.html">Back to Home</a>
+
 </section>
 </center>
 
@@ -37,6 +38,7 @@
 
 </body>
 </html>
+
 
 
 
