--- a/project.html
+++ b/project.html
@@ -39,7 +39,7 @@
       <li><a href="https://kryanbz.github.io/FoC/unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
       <li><a href="https://kryanbz.github.io/FoC/MLinstructions.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
       <li><a href="https://angelic88.github.io/District-Game" target="_blank">Project 6: District Game</a></li>
-      <li><a href="https://angelic88.github.io/Programs/" target="_blank">Project 7: My Programs</a></li>
+      <li><a href="https://angelic88.github.io/Programs/" target="_blank">Project 7: My Programss</a></li>
       <li><a href="https://angelic88.github.io/BMI" target="_blank">Project 8: BMI Calculator</a></li>
     </ul>
   </main>
@@ -50,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
