--- a/index.html
+++ b/index.html
@@ -1,42 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html> 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fundamentals of Computing</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Belize District Identifier</title>
+    <style>
+        /* Background and text */
+        body {
+            background: linear-gradient(to bottom, #cbe8ff, #ffffff);
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+
+        /* Headings */
+        h1, h2 {
+            color: black;
+            text-align: center;
+        }
+
+        /* Instruction text */
+        p {
+            text-align: center;
+            font-size: 16px;
+            color: #333;
+        }
+
+        /* Map image */
+        img {
+            display: block;
+            margin: 20px auto;
+            width: 30%;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+
+        /* Buttons */
+        button {
+            padding: 10px 20px;
+            display: block;
+            width: 150px;
+            margin: 8px auto;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        /* District name display */
+        #district-name {
+            text-align: center;
+            color: #003366;
+            font-size: 18px;
+            font-weight: bold;
+            margin-top: 15px;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            font-size: 14px;
+            color: gray;
+            margin-top: 30px;
+        }
+    </style>
 </head>
+
 <body>
+    <h1>Belize District Identifier</h1>
 
+    <p>Click a district below to highlight it on the map of Belize.</p>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Course</a></li>
-      <li><a href="project.html">Project</a></li>
-      <li><a href="concepts.html">Concepts</a></li>
-      <li><a href="databases.html">Databases</a></li>
-      <li><a href="documentation.html">Documentation</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-    </ul>
-  </nav>
+    <img id="district-map" src="Images/Blank_map_of_Belize.png" alt="Map of Belize">
 
-  
-  <header>
-    <h1>Fundamentals of Computing</h1>
-  </header>
+    <!-- Display selected district name -->
+    <h3 id="district-name"></h3>
 
-  <main>
-    <img src="Images/FoC.jpg" alt="Fundamentals of Computing" class="main-image">
+    <h2>Select a district:</h2>
 
-    <p>
-      This course is an introduction to the fundamentals of Computer Science that will provide students with a foundation for future courses in Computer Science. The course is a broad survey of the discipline through topics that allow students to understand the capabilities of computer systems in terms of: the computer architecture; operating systems and computer networks; software and software development; data organization and visualization; and the potential of computing machines.
-    </p>
-  </main>
+    <button onclick="updateDistrict('Corozal', 'Images/Corozal.png')">Corozal</button>
+    <button onclick="updateDistrict('Orange Walk', 'Images/OrangeWalk.png')">Orange Walk</button>
+    <button onclick="updateDistrict('Belize', 'Images/Belize.png')">Belize</button>
+    <button onclick="updateDistrict('Cayo', 'Images/Cayo.png')">Cayo</button>
+    <button onclick="updateDistrict('Stann Creek', 'Images/StannCreek.png')">Stann Creek</button>
+    <button onclick="updateDistrict('Toledo', 'Images/Toledo.png')">Toledo</button>
+    <button onclick="updateDistrict('No', 'Images/Blank_map_of_Belize.png')">Reset Map</button>
 
-  <footer>
-    <p>@ Powered by UB</p>
-  </footer>
+    <footer>© 2025 Belize District Identifier</footer>
 
+    <script>
+        function updateDistrict(name, image) {
+            // Change the map image
+            document.getElementById('district-map').src = image;
+            // Show which district was clicked
+            document.getElementById('district-name').textContent = "You selected: " + name + " District";
+        }
+    </script>
 </body>
 </html>
 
