--- a/BMI.html
+++ b/BMI.html
@@ -110,6 +110,10 @@
   <p>Result: <span id="bmiResult"></span></p>
 </div>
 
+<center>
+  <a href="project.html" class="back-home">⬅ Go back</a>
+</center>
+
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
 <script>
@@ -132,4 +136,5 @@
 
 </body>
 </html>
+
 
