--- a/BMI.html
+++ b/BMI.html
@@ -86,6 +86,22 @@
       color: #1a535c;
     }
 
+    .back-home {
+    display: inline-block;
+    margin: 20px 0;
+    padding: 10px 15px;
+    background-color: #ffb347;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: 0.3s;
+    }
+
+    .back-home:hover {
+      background-color: #ff9933;
+    }
+
     footer {
       text-align: center;
       margin-top: 40px;
@@ -136,5 +152,6 @@
 
 </body>
 </html>
+
 
 
