--- a/BMI.html
+++ b/BMI.html
@@ -127,7 +127,7 @@
 </div>
 
 <center>
-  <a href="project.html" class="back-home">⬅ Go back</a>
+  <button class="back-home" onclick="window.location.href='project.html'">⬅ Go back</button>
 </center>
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
