--- a/BMI.html
+++ b/BMI.html
@@ -127,8 +127,13 @@
 </div>
 
 <center>
-  <button class="back-home" onclick="window.location.href='project.html'">⬅ Go back</button>
+  <button 
+    style="background-color: #4ecdc4; color: white; font-weight: 600; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-size: 16px; margin-top: 20px;"
+    onclick="window.location.href='project.html'">
+    ⬅ Go Back
+  </button>
 </center>
+
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
@@ -152,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
