--- a/BMI.html
+++ b/BMI.html
@@ -84,24 +84,7 @@
     span {
       font-weight: bold;
       color: #1a535c;
-    }
-
-    .back-home {
-    display: inline-block;
-    margin: 20px 0;
-    padding: 10px 15px;
-    background-color: #ffb347;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 8px;
-    text-decoration: none;
-    transition: 0.3s;
-    }
-
-    .back-home:hover {
-      background-color: #ff9933;
-    }
-
+    
     footer {
       text-align: center;
       margin-top: 40px;
@@ -126,14 +109,13 @@
   <p>Result: <span id="bmiResult"></span></p>
 </div>
 
-<center>
-  <button 
-    style="background-color: #4ecdc4; color: white; font-weight: 600; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-size: 16px; margin-top: 20px;"
-    onclick="window.location.href='project.html'">
-    ⬅ Go Back
-  </button>
-</center>
-
+<div style="text-align:center; margin-top:20px;">
+  <a href="project.html">
+    <button style="width:200px; background-color:#ffb347; color:white; font-weight:600; border:none; border-radius:6px; padding:10px; cursor:pointer; transition:0.3s;">
+      ⬅ Go Back
+    </button>
+  </a>
+</div>
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
@@ -157,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
