--- a/BMI.html
+++ b/BMI.html
@@ -109,14 +109,7 @@
   <p>Result: <span id="bmiResult"></span></p>
 </div>
 
-<div style="text-align:center; margin-top:20px;">
-  <a href="project.html">
-    <button style="width:200px; background-color:#ffb347; color:white; font-weight:600; border:none; border-radius:6px; padding:10px; cursor:pointer; transition:0.3s;">
-      ⬅ Go Back
-    </button>
-  </a>
-</div>
-
+<a href="project.html">Go Back</a></h2>
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
 <script>
@@ -139,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
