--- a/BMI.html
+++ b/BMI.html
@@ -81,7 +81,7 @@
       margin-top: 20px;
     }
 
-    .back-button a button {
+    .back-link {
       width: 200px;
       background-color: #ffb347;
       color: white;
@@ -93,7 +93,7 @@
       transition: 0.3s;
     }
 
-    .back-button a button:hover {
+    .back-link:hover {
       background-color: #ff9933;
       transform: scale(1.04);
     }
@@ -133,11 +133,10 @@
 </div>
 
 <!-- Back to Project Page Button -->
-<div class="back-button">
-  <a href="project.html">
+  <a href="project.html" class="back-link">
     <button>⬅ Back to Project Page</button>
   </a>
-</div>
+
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
@@ -161,3 +160,4 @@
 
 </body>
 </html>
+
