--- a/BMI.html
+++ b/BMI.html
@@ -133,10 +133,11 @@
 </div>
 
 <!-- Back to Project Page Button -->
-  <a href="project.html" class="back-link">
-    <button>⬅ Back to Project Page</button>
-  </a>
-
+<div class="back-button">
+  <button class="back-link" onclick="window.location.href='project.html'">
+    ⬅ Back to Project Page
+  </button>
+</div>
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
@@ -160,4 +161,5 @@
 
 </body>
 </html>
+
 
