--- a/BMI.html
+++ b/BMI.html
@@ -81,7 +81,7 @@
       margin-top: 20px;
     }
 
-    .back-link {
+    .back-button {
       width: 200px;
       background-color: #ffb347;
       color: white;
@@ -93,7 +93,7 @@
       transition: 0.3s;
     }
 
-    .back-link:hover {
+    .back-button:hover {
       background-color: #ff9933;
       transform: scale(1.04);
     }
@@ -134,7 +134,7 @@
 
 <!-- Back to Project Page Button -->
 <div class="back-button">
-  <button class="back-link" onclick="window.location.href='project.html'">
+  <button class="back-button" onclick="window.location.href='project.html'">
     ⬅ Back to Project Page
   </button>
 </div>
@@ -161,3 +161,4 @@
 
 </body>
 </html>
+
