--- a/BMI.html
+++ b/BMI.html
@@ -134,7 +134,7 @@
 
 <!-- Back to Project Page Button -->
 <div class="back-button">
-  <button class="back-button" onclick="window.location.href='Final Project/project.html'">
+  <button class="back-button" onclick="window.location.href='index.html'">
     ⬅ Back to Project Page
   </button>
 </div>
@@ -161,5 +161,6 @@
 
 </body>
 </html>
+
 
 
