--- a/notGate.html
+++ b/notGate.html
@@ -25,7 +25,7 @@
 	<img id="belizeImage" src="noton2.png" alt="noton" width="400" height="86" align="center">
   </div>
 </div>
-<a href="../index.html">Back to Home</a>
+<a href="html/project.html">Back to Projects</a>
 
 </section>
 </center>
@@ -38,6 +38,7 @@
 
 </body>
 </html>
+
 
 
 
