--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
     </p>
 
     <ul>
-      <li><a href="https://kryanbz.github.io/FoC/notgate.html" target="_blank">Project 1: NOT Gate</a></li>
+      <li><a href="https://angelic88.github.io/notGate/" target="_blank">Project 1: NOT Gate</a></li>
       <li><a href="https://kryanbz.github.io/FoC/andgate.html" target="_blank">Project 2: AND Gate</a></li>
       <li><a href="https://kryanbz.github.io/FoC/easyand.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
       <li><a href="https://kryanbz.github.io/FoC/binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
@@ -50,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
