--- a/notGate.html
+++ b/notGate.html
@@ -45,7 +45,7 @@
 
 <!-- Reduced space between Back to Home and Footer -->
 <div style="margin-top:5px;">
-  <a href="index.html">Back to Projects</a>
+  <a href="projects.html">Back to Projects</a>
 </div>
 
 </section>
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
