--- a/BMI.html
+++ b/BMI.html
@@ -85,7 +85,15 @@
       font-weight: bold;
       color: #1a535c;
     }
-
+    
+    .back-link {
+    display: block;
+    margin-top: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #004d40;
+  }
+    
     footer {
       text-align: center;
       margin-top: 40px;
@@ -110,6 +118,9 @@
   <p>Result: <span id="bmiResult"></span></p>
 </div>
 
+<div>
+  <a href="index.html" class="back-link">Back to Projects</a>
+</div>
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
@@ -133,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
