--- a/andGate.html
+++ b/andGate.html
@@ -58,7 +58,7 @@
 
 <!-- Back to Projects button styled -->
 <div>
-  <a href="project.html" class="back-link">Back to Projects</a>
+  <a href="index.html" class="back-link">Back to Projects</a>
 </div>
 
 </section>
