--- a/project.html
+++ b/project.html
@@ -32,15 +32,15 @@
 
     <ul>
       <li><a href="notGate.html" target="_blank">Project 1: NOT Gate</a></li>
-      <li><a href="https://angelic88.github.io/andGate/" target="_blank">Project 2: AND Gate</a></li>
-      <li><a href="https://angelic88.github.io/andGateEasy/" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
-      <li><a href="https://angelic88.github.io/binary/" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
-      <li><a href="https://angelic88.github.io/ascii/" target="_blank">Project 4: ASCII Converter</a></li>
-      <li><a href="https://angelic88.github.io/Unicode/" target="_blank">Project 4: UNICODE Converter</a></li>
-      <li><a href="https://angelic88.github.io/ML/" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
-      <li><a href="https://angelic88.github.io/District-Game" target="_blank">Project 6: District Game</a></li>
-      <li><a href="https://angelic88.github.io/Programs" target="_blank">Project 7: My Programs</a></li>
-      <li><a href="https://angelic88.github.io/BMI/" target="_blank">Project 8: BMI Calculator</a></li>
+      <li><a href="andGate.html" target="_blank">Project 2: AND Gate</a></li>
+      <li><a href="andGateEasyGate.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
+      <li><a href="binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
+      <li><a href="ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
+      <li><a href="unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
+      <li><a href="machineL.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
+      <li><a href="BMI.html" target="_blank">Project 6: District Game</a></li>
+      <li><a href="dgame.html" target="_blank">Project 7: My Programs</a></li>
+      <li><a href="programs.html" target="_blank">Project 8: BMI Calculator</a></li>
     </ul>
   </main>
 
@@ -50,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
