--- a/concepts.html
+++ b/concepts.html
@@ -24,8 +24,8 @@
   </header>
 
   <main>
-    <a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?slide=id.g55d2cabac8_1_10#slide=id.g55d2cabac8_1_10" target="_blank">
-      <img src="Images/algorithms.png" alt="Algorithm Concept" class="main-image">
+    <a href="https://www.canva.com/design/DAG1EiAJyaQ/44_MRFk0f4vhwmiVH9-XUQ/edit?utm_content=DAG1EiAJyaQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton target="_blank">
+      <img src="Images/SED.png" alt="Software Engineering Discipline Concept" class="main-image">
     </a>
     <p>
       This section includes fundamental computing concepts such as algorithms, data processing, and computational thinking. Click the image above to explore our Google Slides presentation on algorithm design.
@@ -38,4 +38,5 @@
 
 </body>
 </html>
+
 
