--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
     <ul>
       <li><a href="notGate.html" target="_blank">Project 1: NOT Gate</a></li>
       <li><a href="andGate.html" target="_blank">Project 2: AND Gate</a></li>
-      <li><a href="andGateEasyGate.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
+      <li><a href="andGateEasy.html" target="_blank">Project 2: AND Gate (Easy Version)</a></li>
       <li><a href="binarytohex.html" target="_blank">Project 3: Binary to Hexadecimal Converter</a></li>
       <li><a href="ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
       <li><a href="unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
@@ -50,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
