--- a/BMI.html
+++ b/BMI.html
@@ -119,7 +119,7 @@
 </div>
 
 <div>
-  <a href="index.html" class="back-link">Back to Projects</a>
+  <a href="project.html" class="back-link">Back to Projects</a>
 </div>
 
 <footer>© 2025 Liyanna Muschamp 💚</footer>
