--- a/dgame.html
+++ b/dgame.html
@@ -60,28 +60,13 @@
             font-weight: bold;
             margin-top: 15px;
         }
-
-        /* Back button */
-        .back-button {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .back-button button {
-            width: 200px;
-            background-color: #ffb347;
-            color: white;
-            font-weight: 600;
-            border: none;
-            border-radius: 6px;
-            padding: 10px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .back-button button:hover {
-            background-color: #ff9933;
-            transform: scale(1.04);
+        
+        .back-link {
+            display: block;
+            margin: 25px 0 10px 0;
+            font-weight: bold;
+            text-decoration: none;
+            color: #004d40;
         }
 
         /* Footer */
@@ -114,10 +99,7 @@
     <button onclick="updateDistrict('Toledo', 'Images/Toledo.png')">Toledo</button>
     <button onclick="updateDistrict('No', 'Images/Blank_map_of_Belize.png')">Reset Map</button>
 
-    <!-- Back to Project Page Button -->
-    <div class="back-button">
-        <button onclick="window.location.href='project.html'">⬅ Back to Project Page</button>
-    </div>
+   <a href="project.html" class="back-link">Back to Projects</a>
 
     <footer>© 2025 Belize District Identifier</footer>
 
@@ -131,6 +113,7 @@
     </script>
 </body>
 </html>
+
 
 
 
