--- a/programs.html
+++ b/programs.html
@@ -85,7 +85,14 @@
       font-weight: bold;
       color: #1a535c;
     }
-
+    
+    .back-link {
+      display: block;
+      margin: 25px 0 10px 0;
+      font-weight: bold;
+      text-decoration: none;
+      color: #004d40;
+    }
     footer {
       text-align: center;
       margin-top: 40px;
@@ -150,6 +157,8 @@
   <p>Result: <span id="bmiResult"></span></p>
 </div>
 
+<a href="project.html" class="back-link">Back to Projects</a>
+
 <footer>© 2025 Liyanna Muschamp 💚</footer>
 
 <script>
@@ -213,3 +222,4 @@
 
 </body>
 </html>
+
