--- a/project.html
+++ b/project.html
@@ -38,9 +38,9 @@
       <li><a href="ascii.html" target="_blank">Project 4: ASCII Converter</a></li>
       <li><a href="unicode.html" target="_blank">Project 4: UNICODE Converter</a></li>
       <li><a href="machineL.html" target="_blank">Project 5: Machine Language Instructions Converter</a></li>
-      <li><a href="BMI.html" target="_blank">Project 6: District Game</a></li>
-      <li><a href="dgame.html" target="_blank">Project 7: My Programs</a></li>
-      <li><a href="programs.html" target="_blank">Project 8: BMI Calculator</a></li>
+      <li><a href="dgame.html" target="_blank">Project 6: District Game</a></li>
+      <li><a href="programs.html" target="_blank">Project 7: My Programs</a></li>
+      <li><a href="BMI.html" target="_blank">Project 8: BMI Calculator</a></li>
     </ul>
   </main>
 
