--- a/dgame.html
+++ b/dgame.html
@@ -99,8 +99,10 @@
     <button onclick="updateDistrict('Toledo', 'Images/Toledo.png')">Toledo</button>
     <button onclick="updateDistrict('No', 'Images/Blank_map_of_Belize.png')">Reset Map</button>
 
-   <a href="project.html" class="back-link">Back to Projects</a>
-
+    <center>
+        <a href="project.html" class="back-link">Back to Projects</a>
+    </center
+    
     <footer>© 2025 Belize District Identifier</footer>
 
     <script>
@@ -113,6 +115,7 @@
     </script>
 </body>
 </html>
+
 
 
 
