--- a/aboutme.html
+++ b/aboutme.html
@@ -14,31 +14,6 @@
       color: #004d40;
     }
 
-    nav.navbar {
-      background-color: #ffbe73;
-      padding: 10px 0;
-    }
-
-    nav.navbar ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    nav.navbar li a {
-      text-decoration: none;
-      color: #004d40;
-      font-weight: bold;
-      padding: 5px 10px;
-    }
-
-    nav.navbar li a:hover {
-      color: #008CBA;
-    }
-
     main {
       max-width: 900px;
       margin: 30px auto;
@@ -105,7 +80,7 @@
       <h2>About Me</h2>
       
       <div class="profile-container">
-        <img src="me.png" alt="Profile" class="profile-image">
+        <img src="Images/me.jpg" alt="Profile" class="profile-image">
         
         <div>
           <h3>My name is Liyanna Muschamp</h3>
@@ -127,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
