--- a/dgame.html
+++ b/dgame.html
@@ -6,7 +6,7 @@
         /* Background and text */
         body {
             background: linear-gradient(to bottom, #cbe8ff, #ffffff);
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Neue', cursive;
             margin: 0;
             padding: 20px;
         }
@@ -99,11 +99,9 @@
     <button onclick="updateDistrict('Stann Creek', 'Images/StannCreek.png')">Stann Creek</button>
     <button onclick="updateDistrict('Toledo', 'Images/Toledo.png')">Toledo</button>
     <button onclick="updateDistrict('No', 'Images/Blank_map_of_Belize.png')">Reset Map</button>
-
-    <div>
+    
     <a href="projects.html" class="back-link">Back to Projects</a>
-    </div>
-
+    
     <footer>© Powered by LM</footer>
 
     <script>
@@ -116,6 +114,7 @@
     </script>
 </body>
 </html>
+
 
 
 
