--- a/dgame.html
+++ b/dgame.html
@@ -100,7 +100,7 @@
     <button onclick="updateDistrict('Toledo', 'Images/Toledo.png')">Toledo</button>
     <button onclick="updateDistrict('No', 'Images/Blank_map_of_Belize.png')">Reset Map</button>
     
-    <a href="projects.html" class="back-link">Back to Projects</a>
+    <a href="project.html" class="back-link">Back to Projects</a>
     
     <footer>© Powered by LM</footer>
 
@@ -114,6 +114,7 @@
     </script>
 </body>
 </html>
+
 
 
 
