--- a/concepts.html
+++ b/concepts.html
@@ -28,7 +28,7 @@
       <img src="Images/SED.png" alt="Software Engineering Discipline Concept" class="main-image">
     </a>
     <p>
-      This section includes fundamental computing concepts such as algorithms, data processing, and computational thinking. Click the image above to explore our Google Slides presentation on algorithm design.
+     Click the image to view my presentation on SED.
     </p>
   </main>
 
@@ -38,5 +38,6 @@
 
 </body>
 </html>
+
 
 
