--- a/aboutme.html
+++ b/aboutme.html
@@ -84,7 +84,7 @@
         
         <div>
           <h3>My name is Liyanna Muschamp</h3>
-          <p>’m passionate about learning how technology works and how it can be used to solve everyday problems. I created this website to show what I’ve learned so far in my Fundamentals of Computing class and to share my journey in IT.</p>
+          <p>I’m passionate about learning how technology works and how it can be used to solve everyday problems. I created this website to show what I’ve learned so far in my Fundamentals of Computing class and to share my journey in IT.</p>
         </div>
       </div>
       
@@ -102,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
