--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="databases.html">Databases</a></li>
       <li><a href="documents.html">Documentation</a></li>
       <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
     </ul>
   </nav>
 
@@ -39,3 +40,4 @@
 
 </body>
 </html>
+
