--- a/concepts.html
+++ b/concepts.html
@@ -16,6 +16,7 @@
       <li><a href="databases.html">Databases</a></li>
       <li><a href="documentation.html">Documentation</a></li>
       <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
     </ul>
   </nav>
 
@@ -38,6 +39,7 @@
 
 </body>
 </html>
+
 
 
 
