--- a/aboutme.html
+++ b/aboutme.html
@@ -72,6 +72,7 @@
       <li><a href="databases.html">Databases</a></li>
       <li><a href="documentation.html">Documentation</a></li>
       <li><a href="aboutme.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
     </ul>
   </nav>
 
@@ -102,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
