--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
       <li><a href="dgame.html" target="_blank">Project 6: District Game</a></li>
       <li><a href="programs.html" target="_blank">Project 7: My Programs</a></li>
       <li><a href="BMI.html" target="_blank">Project 8: BMI Calculator</a></li>
-      <li><a href=dataS.html" target="_blank">Project 9: Basic Data Structures</a></li>
+      <li><a href="dataS.html" target="_blank">Project 9: Basic Data Structures</a></li>
     </ul>
   </main>
 
@@ -52,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
